@@ -28,6 +28,7 @@ return array(
 			'rules'=>array(
         		'post/<id:\d+>/<title:.*?>'=>'post/view',
         		'posts/<tag:.*?>'=>'post/index',
+        		'<controller:\w+>/<action:\w+>'=>'<controller>/<action>',
 			),
 		),
 	),
