@@ -6,6 +6,7 @@ Version 1.1.1 to be released
 ----------------------------
 - Bug #839: typo in CFormatter about calling method_exists() (Qiang)
 - Bug: Setting the 'with' option in criteria array doesn't trigger eager loading for AR (Qiang)
+- Enh: Refactored the blog demo to make use of the new CActiveForm and the filtering feature of CGridView (Qiang)
 - New: Added CActiveForm that performs model validations via AJAX (Qiang)
 
 Version 1.1.0 January 10, 2010
